<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, HomeMSSDialog!</string>
    <string name="app_name">手机视频监控系统</string>
	<string name="CheckUserAction">http://172.30.9.57:8080/JJAF/MobileServlet</string>
	<string name="LoginPrompt1">登录失败,用户名或者密码错误!</string>
	<string name="LoginPrompt2">登录失败,用户类型不合法!</string>
	<string name="LoginPrompt3">登录失败,系统异常,请联系管理员解决或者请尝试重新登录!</string>
	<string name="LoginPrompt4">登录失败,与服务器通信出错!</string>
	<string name="LoginPrompt">登录提示</string>
	<string name="UserName">用户名：</string>
	<string name="Password">  密码：</string>
	<string name="Login">登录</string>
	<string name="Cancel">取消</string>
	<string name="Logout">注销</string>
	<string name="str_ok">确定</string>
	<string name="RequireUserName">用户名不能够为空!</string>
	<string name="RequirePwd">密码不能够为空!</string>
	<string name="app_about">关于</string>
	<string name="str_exit">关闭</string>
	<string name="app_about_msg">手机视频监控系统 2.0\nCopyright (C) GOTOP 2008 - 2010</string>
	<string name="app_exit">退出提示</string>
	<string name="app_exit_msg">你确定要退出手机视频监控系统吗?</string>
	<string name="str_no">取消</string>

<string name="prompt">请稍等片刻...</string>
<string name="checkuser">程序正在对用户进行合法性验证...</string>
</resources>
