<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:id="@+id/login_title" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/app_name"
	    android:paddingLeft="100px" 
	    android:paddingTop="20px"
	    android:paddingBottom="20px"
	/>
	<TableLayout android:id="@+id/TableLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:shrinkColumns="0">
		<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:id="@+id/TextView01" android:layout_width="60px" 
			android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/UserName"></TextView>
			<EditText android:layout_width="120px" android:layout_height="wrap_content" 
			android:id="@+id/txtUserName" android:layout_weight="1" android:hint="请输入用户名"></EditText>
		</TableRow>
		<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/TextView02" android:layout_width="60px" android:layout_weight="1" 
			android:layout_height="wrap_content" android:text="@string/Password"></TextView>
			<EditText android:layout_width="120px" android:layout_height="wrap_content" android:layout_weight="1"  
			android:password="true" android:id="@+id/txtPwd" android:inputType="textVisiblePassword"></EditText>
		</TableRow>
		<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<Button android:id="@+id/btnLogin" android:text="@string/Login" android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" ></Button>
			<Button android:id="@+id/btnCancel" android:text="@string/Cancel" android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" ></Button>
		</TableRow>
	</TableLayout>
</LinearLayout>
